Tests/CompilerTests/negative/no-coercion.hylo
fun main() {
  _ = () as {Void, Void}
}
